<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mypofin</string>
    <string name="app_title">Mypofin</string>
    <string name="app_subtitle">My points of interest</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_draw_opc1">Points List</string>
    <string name="menu_draw_opc2">New Point</string>
    <string name="menu_navbar_opc1">About</string>
    <string name="dw_menu_open">Open Drawer</string>
    <string name="dw_menu_close">Close Drawer</string>
    <string name="title_activity_about">Mypofin</string>
    <string name="title_activity_points_list">Mypofin</string>
    <string name="title_activity_register">Mypofin</string>
    <string name="title_activity_point_form">Mypofin</string>
    <string name="subtitle_activity_points_list">Points List</string>
    <string name="subtitle_activity_register">Register</string>
    <string name="subtitle_activity_point_form">Point Edition</string>
    <string name="about_head">About My points of interest</string>
    <string name="about_copyright">Copyright © 2014</string>
    <string name="about_rights_reserved">All Rights Reserved</string>
    <string name="about_info">eduardo.baltazar@unosquare.com</string>
    <string name="title_activity_login">Login</string>
    <string name="email_lbl">EMAIL</string>
    <string name="email_typelbl">Type email here...</string>
    <string name="password_lbl">PASSWORD</string>
    <string name="password_typelbl">Type password here...</string>
    <string name="name_lbl">NAME</string>
    <string name="name_typelbl">Type name here...</string>
    <string name="btn_login_lbl">sign in</string>
    <string name="btn_register_lbl">register</string>
    <string name="btn_edit_point_lbl">edit</string>
    <string name="btn_delete_point_lbl">delete</string>
    <string name="btn_cancel_point_lbl">cancel</string>
    <string name="btn_save_point_lbl">save</string>
    <string name="btn_ok_point_lbl">ok</string>
    <string name="btn_yes_point_lbl">YES</string>
    <string name="btn_no_point_lbl">NO</string>
    <string name="email_format_error">Error - Incorrect EMail Format</string>
    <string name="gral_error_msg">Error</string>
    <string name="title_field1">TITLE</string>
    <string name="title_field2">LATITUDE</string>
    <string name="title_field3">LONGITUDE</string>
    <string name="title_field4">COMMENT</string>
    <string name="txt_field1">Type title here...</string>
    <string name="txt_field2">Type latitude here...</string>
    <string name="txt_field3">Type longitude here...</string>
    <string name="txt_field4">Type comment here...</string>
    <string name="txt_dialog_save">Do you want to save this point?</string>
    <string name="title_dialog_delete">Confirm Delete...</string>
    <string name="delete_question">Are you sure you want delete this point?</string>
    <string name="info_login_check">Remember Information</string>
    <string name="dtl_link_gotomap">go to the map</string>

</resources>
