<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_lbl"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email_typelbl"
        android:layout_below="@+id/txv_email"/>

    <TextView
        android:id="@+id/txv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_lbl"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edit_email"
        android:layout_alignParentRight="true"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_typelbl"
        android:layout_below="@+id/txv_password"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_login_check"
        android:id="@+id/checkBox_remember"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edit_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/btn_login_lbl"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_alignParentLeft="true"
        android:elegantTextHeight="false"
        android:layout_below="@+id/checkBox_remember"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/btn_register_lbl"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:elegantTextHeight="false"
        android:layout_below="@+id/checkBox_remember"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_login"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|clip_horizontal"
        android:layout_weight="1" />

</RelativeLayout>