<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:stackFromBottom="true"
    android:transcriptMode="alwaysScroll" >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txv_name_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_lbl"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/edit_name_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/name_typelbl"
            android:layout_below="@+id/txv_name_reg"/>

        <TextView
            android:id="@+id/txv_email_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_lbl"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/edit_name_form"/>

        <EditText
            android:id="@+id/edit_email_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email_typelbl"
            android:layout_below="@+id/txv_email_reg"/>

        <TextView
            android:id="@+id/txv_password_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_lbl"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/edit_email_form"/>

        <EditText
            android:id="@+id/edit_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password_typelbl"
            android:layout_below="@+id/txv_password_reg"/>

        <Button
            android:id="@+id/btn_register_form"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/btn_register_lbl"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:elegantTextHeight="false"
            android:layout_below="@+id/edit_password_form"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_Register"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_gravity="center_horizontal|clip_horizontal"
            android:layout_weight="1" />

    </RelativeLayout>

</ScrollView>