<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.unosquare.finalapp.AboutActivity">

    <TextView
        android:id="@+id/txt_head"
        android:text="@string/about_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/teal"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txt_info"
        android:text="@string/about_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txt_head"
        android:textSize="14dp"
        android:textColor="@color/blue"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txt_copyright"
        android:text="@string/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txt_info"
        android:textSize="14dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txt_rights_reserved"
        android:text="@string/about_rights_reserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txt_copyright"
        android:textSize="14dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
