<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/table_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/title_field1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/highlighted_text_material_dark"
            android:textColor="#000000"
            android:padding="4dip"
            android:gravity="center|left"/>

        <TextView
            android:id="@+id/dtl_txt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Value"
            android:background="@color/white"
            android:textColor="#000000"
            android:padding="8dip"
            android:gravity="center"/>

        <TextView
            android:text="@string/title_field4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/highlighted_text_material_dark"
            android:textColor="#000000"
            android:padding="4dip"
            android:gravity="center|left"/>

        <TextView
            android:id="@+id/dtl_txt_comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Value"
            android:background="@color/white"
            android:textColor="#000000"
            android:padding="6dip"
            android:gravity="center"/>

        <!--TextView
            android:text="@string/title_field2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/highlighted_text_material_dark"
            android:textColor="#000000"
            android:padding="4dip"
            android:gravity="center|left"/-->

        <!--TextView
            android:id="@+id/dtl_txt_latitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Value"
            android:background="@color/white"
            android:textColor="#000000"
            android:padding="8dip"
            android:gravity="center"/-->

        <!--TextView
            android:text="@string/title_field3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/highlighted_text_material_dark"
            android:textColor="#000000"
            android:padding="4dip"
            android:gravity="center|left"/-->

        <!--TextView
            android:id="@+id/dtl_txt_longitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Value"
            android:background="@color/white"
            android:textColor="#000000"
            android:padding="6dip"
            android:gravity="center"/-->

        <TextView
            android:id="@+id/link_gotomap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dtl_link_gotomap"
            android:background="@color/white"
            android:textColor="@color/blue"
            android:padding="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_point_edit"
        android:layout_below="@id/table_dialog"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_edit_point_lbl"
        />

    <Button
        android:id="@+id/btn_point_delete"
        android:layout_below="@id/table_dialog"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_delete_point_lbl"
        />

    <Button
        android:id="@+id/btn_point_cancel"
        android:layout_below="@id/table_dialog"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/btn_cancel_point_lbl"
        />

</RelativeLayout>